2013-07-30  Roland Levillain  <roland@lrde.epita.fr>

	Fix resizing code in toolchain::internal::text_in_picture_functor.

	* scribo/toolchain/internal/text_in_picture_functor.hh
	(text_in_picture_functor<I>::get_factor): New precondition: ensure
	argument `max_dim_size', used as denominator, is non null.
	(text_in_picture_functor<I>::operator()): Do not resize the image
	if `max_dim_size' is null.
	Some cosmetic changes.

2013-07-30  Roland Levillain  <roland@lrde.epita.fr>

	Add missing `mln' namespace qualifiers.

	* scribo/filter/object_groups_with_holes.hh
	(scribo::filter::impl::generic::object_groups_with_holes)
	* scribo/primitive/regroup/from_single_left_link.hh
	(regroup::from_single_left_link(const object_groups<L>&, unsigned)):
	Here.

2013-07-30  Roland Levillain  <roland@lrde.epita.fr>

	Move to-be-installed header files from src/ to scribo/.

	* src/afp/components.hh,
	* src/afp/link.hh,
	* src/afp/regroup.hh:
	Move files...
	* scribo/afp/components.hh,
	* scribo/afp/link.hh,
	* scribo/afp/regroup.hh:
	...here, as they are included by other files located under
	scribo/, and therefore should be installed as well.
	* scribo/toolchain/internal/text_in_picture_functor.hh,
	* src/text_recognition_in_picture.cc:
	Adjust.
	* headers.mk,
	* tests/unit_test/unit-tests.mk:
	Regen.

2013-07-29  Roland Levillain  <roland@lrde.epita.fr>

	Lift scribo::document's dependency on Magick++.

	* scribo/core/document.hh [SCRIBO_NMAGICK]: Disable everything
	related to mln::io::magick.

2013-06-25  Roland Levillain  <roland@lrde.epita.fr>

	* scribo/text/recognition.hh: Aesthetic changes.

2013-06-25  Roland Levillain  <roland@lrde.epita.fr>

	Restrict workaround-related locale changes to LC_NUMERIC.

	* scribo/text/recognition.hh: Here.

2013-06-25  Roland Levillain  <roland@lrde.epita.fr>

	More locale-related Tesseract workarounds.

	* scribo/text/recognition.hh: Here.

2013-06-20  Roland Levillain  <roland@lrde.epita.fr>
