@@ -1,3 +1,10 @@
+2013-07-31  Roland Levillain  <roland@lrde.epita.fr>
+
+	Fix the distribution of Scribo.
+
+	* src/Makefile.am (EXTRA_DIST): Remove afp/components.hh,
+	afp/link.hh and afp/regroup.hh.
+
 2013-07-30  Roland Levillain  <roland@lrde.epita.fr>
 
 	Fix resizing code in toolchain::internal::text_in_picture_functor.
